// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DEPRECATED | Molecules / Select  Select with hidden label 1`] = `
<label>
  <div
    className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Stocks
    </span>
  </div>
  <div
    className="Select__SelectWrapper-jbievh-2 kNxlVf"
  >
    <select
      className="Select__StyledSelect-jbievh-0 kKDEGw"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="Option 2"
    >
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Select__SelectedValue-jbievh-3 gVZZOz"
    >
      Option 2
    </span>
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV Select__Chevron-jbievh-1 bzobpz"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED | Molecules / Select  Select with overflowing placeholder 1`] = `
<div
  style={
    Object {
      "width": 150,
    }
  }
>
  <label>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Options
    </span>
    <div
      className="Select__SelectWrapper-jbievh-2 kNxlVf"
    >
      <select
        className="Select__StyledSelect-jbievh-0 kKDEGw"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={1}
      >
        <option
          value={1}
        >
          Reaaaaaaaaaally long option
        </option>
      </select>
      <span
        aria-hidden={true}
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Select__SelectedValue-jbievh-3 gVZZOz"
      >
        Reaaaaaaaaaally long option
      </span>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV Select__Chevron-jbievh-1 bzobpz"
        focus={false}
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Storyshots DEPRECATED | Molecules / Select  Select with placeholder 1`] = `
<label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
  >
    Options
  </span>
  <div
    className="Select__SelectWrapper-jbievh-2 kNxlVf"
  >
    <select
      className="Select__StyledSelect-jbievh-0 kKDEGw"
      defaultValue=""
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        disabled={true}
        value=""
      >
        Select option
      </option>
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Select__SelectedValue-jbievh-3 gVZZOz"
    >
      Select option
    </span>
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV Select__Chevron-jbievh-1 bzobpz"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED | Molecules / Select  Select with placeholder and preselected value 1`] = `
<label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
  >
    Options
  </span>
  <div
    className="Select__SelectWrapper-jbievh-2 kNxlVf"
  >
    <select
      className="Select__StyledSelect-jbievh-0 kKDEGw"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="Option 2"
    >
      <option
        disabled={true}
        value=""
      >
        Select option
      </option>
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Select__SelectedValue-jbievh-3 gVZZOz"
    >
      Option 2
    </span>
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV Select__Chevron-jbievh-1 bzobpz"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED | Molecules / Select  Select with prepended empty value 1`] = `
<label>
  <div
    className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Stocks
    </span>
  </div>
  <div
    className="Select__SelectWrapper-jbievh-2 kNxlVf"
  >
    <select
      className="Select__StyledSelect-jbievh-0 kKDEGw"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    >
      <option
        value=""
      >
        All
      </option>
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Select__SelectedValue-jbievh-3 gVZZOz"
    >
      All
    </span>
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV Select__Chevron-jbievh-1 bzobpz"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED | Molecules / Select  Select with preselected value 1`] = `
<label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
  >
    Stocks
  </span>
  <div
    className="Select__SelectWrapper-jbievh-2 kNxlVf"
  >
    <select
      className="Select__StyledSelect-jbievh-0 kKDEGw"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="Option 2"
    >
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Select__SelectedValue-jbievh-3 gVZZOz"
    >
      Option 2
    </span>
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV Select__Chevron-jbievh-1 bzobpz"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED | Molecules / Select  Select without placeholder 1`] = `
<label>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
  >
    Stocks
  </span>
  <div
    className="Select__SelectWrapper-jbievh-2 kNxlVf"
  >
    <select
      className="Select__StyledSelect-jbievh-0 kKDEGw"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Select__SelectedValue-jbievh-3 gVZZOz"
    />
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV Select__Chevron-jbievh-1 bzobpz"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;
